# src/routes/routes.ts
@@ -355,6 +355,7 @@ const models: TsoaRoute.Models = {
             "didDocument": {"ref":"DidDocument"},
             "privatekey": {"dataType":"string"},
             "endpoint": {"dataType":"string"},
+            "isDefault": {"dataType":"boolean"},
         },
         "additionalProperties": false,
     },
@@ -548,6 +549,7 @@ const models: TsoaRoute.Models = {
             "credentialSubject": {"ref":"SingleOrArray_W3cCredentialSubject_","required":true},
             "credentialSchema": {"ref":"SingleOrArray_W3cCredentialSchema_"},
             "credentialStatus": {"ref":"W3cCredentialStatus"},
+            "prettyVc": {"dataType":"any"},
         },
         "additionalProperties": false,
     },
